# wasmcloud-otp

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .tool-versions  CODEOWNERS  Dockerfile.localstatic  Makefile  OWNERS  README.md  flake.nix  index.yaml
.devcontainer/: README.md  devcontainer.json
.devcontainer/wasmcloudfeature/: devcontainer-feature.json  install.sh
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions/install-nix/: action.yml
.github/workflows/: build_tarballs_manual.yml  elixir.yml  host_core.yml  release.yml  static_macos  wasmcloud_host.yml
capability-providers/: Makefile  README.md
capability-providers/httpserver/go/: go.mod  main.go
capability-providers/keyvalue/rust/: Cargo.toml
capability-providers/keyvalue/rust/src/: generated.rs  kvredis.rs  main.rs  rpc.rs
host_core/: .credo.exs  .dockerignore  .gitignore  Dockerfile  Dockerfile.static  Makefile  README.md  beam_burrito.sh  mix.exs
host_core/config/: config.exs  dev.exs  prod.exs  release_prod.exs  test.exs
host_core/lib/: application.ex  copy_nif.ex  host_core.ex  remove_nix_store_refs.ex
host_core/lib/host_core/: actors.ex  application.ex  claims_manager.ex  cloud_event.ex  config_plan.ex  config_service_client.ex  console_logger.ex  control_interface.ex  errors.ex  files_config_provider.ex  heartbeat_emitter.ex  host.ex  lattice.ex  linkdefs_manager.ex  metadata_cache.ex  namegen.ex  nats.ex  nats_supervisor.ex  oci.ex  providers.ex  span_test.ex  structured_logger.ex  wasmcloud.ex  web_assembly.ex
host_core/lib/host_core/actors/: actor_module.ex  actor_rpc_server.ex  actor_rpc_supervisor.ex  actor_supervisor.ex  call_counter.ex  pid_map.ex
host_core/lib/host_core/claims/: manager.ex  server.ex
host_core/lib/host_core/control_interface/: acl.ex  host_server.ex  lattice_server.ex  server.ex
host_core/lib/host_core/jetstream/: cache_loader.ex  client.ex  legacy_cache_loader.ex  metadata_cache_loader.ex
host_core/lib/host_core/lattice/: lattice_root.ex  lattice_supervisor.ex  rpc_client.ex
host_core/lib/host_core/linkdefs/: manager.ex  server.ex
host_core/lib/host_core/policy/: manager.ex
host_core/lib/host_core/providers/: provider_module.ex  provider_supervisor.ex
host_core/lib/host_core/refmaps/: manager.ex  server.ex
host_core/lib/host_core/vhost/: config_plan.ex  configuration.ex  files_config_provider.ex  heartbeats.ex  virtual_host.ex
host_core/lib/host_core/wasmcloud/: native.ex  rpc_invocations.ex  runtime.ex  runtime_config.ex  runtime_server.ex
host_core/lib/host_core/web_assembly/: imports.ex
host_core/lib/linkdefs/: server.ex
host_core/native/hostcore_wasmcloud_native/: Cargo.toml  Cross.toml  README.md  rust-toolchain.toml
host_core/native/hostcore_wasmcloud_native/.cargo/: config
host_core/native/hostcore_wasmcloud_native/src/: atoms.rs  client.rs  environment.rs  inv.rs  lib.rs  objstore.rs  oci.rs  par.rs  task.rs  wasmruntime.rs
host_core/native/lattice_rpc/: Cargo.toml  README.md
host_core/native/lattice_rpc/src/: lib.rs
host_core/priv/actors/: echo_call_alias.wasm  echo_s.wasm  kvcounter_unpriv_s.wasm  pinger_s.wasm  ponger_s.wasm
host_core/priv/certs/: host001.crt  host001.key  provider001.crt  provider001.key  rootca.crt  rootca.key
host_core/rel/: config.exs
host_core/test/: docker-compose.yml  host_core_test.exs  test_helper.exs
host_core/test/e2e/: controlinterface_test.exs  echo_test.exs  kvcounter_test.exs
host_core/test/fixtures/actors/: echo.wasm  echo_s.wasm  echo_unpriv_s.wasm  example_policy_s.wasm  kvcounter.wasm  kvcounter_unpriv_s.wasm  pinger_s.wasm  ponger_s.wasm  randogenlogger_s.wasm
host_core/test/fixtures/actors/echo_unpriv/: Cargo.toml  Makefile  README.md  actor.mk
host_core/test/fixtures/actors/echo_unpriv/.keys/: account.nk  module.nk
host_core/test/fixtures/actors/echo_unpriv/src/: lib.rs
host_core/test/fixtures/actors/kvcounter_unpriv/: Cargo.toml  Makefile  README.md  actor.mk
host_core/test/fixtures/actors/kvcounter_unpriv/.keys/: account.nk  module.nk
host_core/test/fixtures/actors/kvcounter_unpriv/src/: lib.rs
host_core/test/fixtures/actors/randogenlogger/: .gitignore  Cargo.toml  Makefile  README.md  actor.mk
host_core/test/fixtures/actors/randogenlogger/src/: lib.rs
host_core/test/host_core/: actors_test.exs  benchmark_test.exs  policy_test.exs  private_registry_test.exs  providers_test.exs
host_core/test/host_core/benchmark/: common.exs  echo_test.exs  kvcounter_test.exs  nif_test.exs
host_core/test/support/: common.exs  constants.exs  event_watcher.exs
lattice-rpc/: Cargo.toml
lattice-rpc/src/: dispatch.rs  lib.rs
otel/: README.md  compose.yaml  tempo.yaml
protocol/: capcom.proto  genproto.sh
washboard/: .gitignore  README.md  mix.exs
washboard/lib/: washboard.ex
washboard/lib/washboard/: application.ex
washboard/test/: washboard_test.exs
wasmcloud_host/: .dockerignore  .gitignore  Dockerfile  Dockerfile.release  Dockerfile.static  Makefile  README.md  docker-compose.yml  mix.exs  package-lock.json
wasmcloud_host/assets/: package-lock.json  package.json  webpack.config.js
wasmcloud_host/assets/css/: app.scss
wasmcloud_host/assets/js/: app.js
wasmcloud_host/chart/: Chart.yaml  README.md  values.yaml
wasmcloud_host/chart/templates/: deployment.yaml  leafnode.yaml
wasmcloud_host/config/: config.exs  dev.exs  prod.exs  prod.secret.exs  release_prod.exs  test.exs
wasmcloud_host/lib/: wasmcloud_host.ex  wasmcloud_host_web.ex
wasmcloud_host/lib/wasmcloud_host/: actor_watcher.ex  application.ex  lattice.ex
wasmcloud_host/lib/wasmcloud_host_web/: endpoint.ex  router.ex  telemetry.ex
wasmcloud_host/rel/: config.exs
wasmcloud_host/rel/scripts/: apk-build-install.sh  apk-release-install.sh  apt-build-install.sh  apt-nif-install.sh  apt-release-install.sh  copy-release.sh  mac-build-install.sh  mac-nif-install.sh  mac-release-install.sh  rust-install.sh
wasmcloud_host/test/state_through_nats/: sometests.exs
wasmcloud_host/test/support/: channel_case.ex  conn_case.ex
(+43 files in other folders)
