[package]
name = "wasmcloud-lattice-rpc"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
crate-type = ["dylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nats = "0.9.17"
serde = {version = "1.0.126", features = ["derive"] }
wascap = "0.6.0"
ring = "0.16.20"
uuid = {version = "0.8.2", features = ["v4"]}
data-encoding = "2.3.2"
rmp = "0.8.10"
rmp-serde = "0.15.4"