[package]
name = "wasmcloud-redis"
version = "0.12.0"
authors = ["wasmCloud Team"]
edition = "2018"
homepage = "https://wasmcloud.dev"
repository = "https://github.com/wasmcloud/capability-providers"
description = "Redis capability provider for the wasmCloud WebAssembly actor runtime"
license = "Apache-2.0"
documentation = "https://docs.rs/wasmcloud-redis"
readme = "README.md"
keywords = ["webassembly", "wasm", "keyvalue", "wasmcloud", "redis"]
categories = ["wasm", "api-bindings"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
nats = "0.9.18"
env_logger = "0.8"
rmp-serde = "0.15.4"
serde = {version = "1.0.124", features = ["derive"] }
log = "0.4.14"
redis = "0.20.0"
crossbeam="0.8.1"
serde_bytes = "0.11.5"
lazy_static = "1.4.0"
