[package]
name = "hostcore_wasmcloud_native"
version = "0.1.1"
authors = []
edition = "2021"

[lib]
name = "hostcore_wasmcloud_native"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
rustler = "0.26.0"
lazy_static = "1.0"
serde = {version = "1.0.126", features = ["derive"] }
serde_bytes = "0.11.5"
nkeys = "0.2.0"
wascap = "0.8.0"
ring = "0.16.20"
uuid = {version = "1.2.1", features = ["v4"]}
data-encoding = "2.3.2"
rmp = "0.8.10"
rmp-serde = "1.0.0"
oci-distribution = { version = "0.9.1", default-features = false, features = ["rustls-tls"] }
provider-archive = "0.6.0"
tokio = {version = "1.7.1", features = ["rt", "rt-multi-thread"] }
once_cell = "1.2.0"
chrono-humanize = "0.2.1"
chrono = "0.4.19"
tokio-stream = "0.1"
# This should be replaced with a published version once bindle 0.9 is out
bindle = { version = "0.8", git = "https://github.com/deislabs/bindle", rev = "7a5f11ca9986837f8ee54e8d577204ec520b6764", default-features = false, features = ["client", "caching", "rustls-tls"] }
async-trait = "0.1"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
nats = "0.23.1"
