[package]
name = "hostcore_wasmcloud_native"
version = "0.1.2"
authors = []
edition = "2021"

[lib]
name = "hostcore_wasmcloud_native"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
wasmcloud = { git = "https://github.com/wasmcloud/wasmcloud", branch = "wasmcloud-otp" }
rustler = "0.29"
lazy_static = "1.0"
async-trait = "0.1.66"
serde = {version = "1.0.126", features = ["derive"] }
serde_bytes = "0.11.5"
nkeys = "0.3.0"
futures = "0.3.27"
wascap = "0.11"
ring = "0.16.20"
rand = "0.8.5"
log = "0.4.17"
uuid = {version = "1.2.1", features = ["v4"]}
data-encoding = "2.3.2"
rmp = "0.8.10"
rmp-serde = "1.0.0"
oci-distribution = { version = "0.9.1", default-features = false, features = ["rustls-tls"] }
provider-archive = "0.6.0"
tokio = {version = "1.26.0", features = ["rt", "rt-multi-thread"] }
once_cell = "1.2.0"
chrono-humanize = "0.2.1"
chrono = "0.4.19"
tokio-stream = "0.1"
bindle = { version = "0.9", default-features = false, features = ["client", "caching", "rustls-tls"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
nats = "0.24.0"
anyhow = "1.0.69"
