[package]
name = "lattice_rpc"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
name = "lattice_rpc"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
rustler = "0.21.1"
lazy_static = "1.0"
nats = "0.9.17"
wascap = "0.6.0"
ring = "0.16.20"
serde = {version = "1.0.126", features = ["derive"]}
rpcclient = { path = "../../../lattice-rpc", package = "wasmcloud-lattice-rpc" }