[package]
name = "kvcounter"
version = "0.3.0"
authors = [ "wasmcloud Team" ]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait = "0.1"
form_urlencoded = "1.0"
futures = "0.3"
serde_bytes = "0.11"
serde_json ="1.0"
serde = {version = "1.0", features = ["derive"]}

wasmbus-rpc = "0.3"
wasmcloud-interface-keyvalue = "0.2"
wasmcloud-interface-httpserver = "0.1"

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
