[package]
name = "randogenlogger"
version = "0.1.0"
authors = [ "" ]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "randogenlogger"

[dependencies]
futures = "0.3"
form_urlencoded = "1.0"
wasmbus-rpc = "0.10"
wasmcloud-interface-httpserver = "0.7"
wasmcloud-interface-logging = "0.7"
wasmcloud-interface-numbergen = "0.7"

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
strip = true